# kapso

./: .gitignore  .praxium_state.md  =0.35.0  =1.0.0  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  __init__.py  desgin.md  design.md  doc_changes.md  docs.json  docs.json.bak  enhance_exp_memory.md  log.txt  logs.txt  logs_skip.txt  pyproject.toml  repos copy.json  requirements.txt  start_infra.sh  stop_infra.sh  task.md  task_exp_memory.md  task_learners_structure.md  task_wiki_mcps.md  tasks.md  tasks_search.md  test_search.py
archive/: README.md  __init__.py  _template.py  base.py  basic_context_manager.py  basic_linear_search.py  cognitive_context_manager.py  context_manager.yaml  factory.py  kg_enriched_context_manager.py  linear_search.py  llm_tree_search.py  test_basic_context_manager.py  test_cognitive_e2e_dimensions.py  test_cognitive_iteration_loop.py  test_cognitive_multi_iteration.py  test_cognitive_real_kg.py  test_kapso_flow.py  test_kapso_full_e2e.py  token_efficient_context_manager.py  types.py
data/: .gitkeep  llm_finetuning.json  repo_research_results.csv  repo_urls.json
developer_docs/: claude_code_bedrock.md  coding_agents.md  coding_agents_tooling_research.md  deployment.md  forward_pass.md  knowledge_ingestion.md  pr_repo_memory_pr_notes.md  prompt_tuning.md  wiki_page_structure.md  wiki_tools.md
docs/: deployment.md  index.mdx  installation.mdx  quickstart.mdx  repo_ingestor_guide.md
mintlify-docs/: docs.json  installation.mdx
moltbook_bot/: README.md  check_moltbook_api.sh  server.py  setup_openclaw.sh  start_server.sh.example
paper/: Praxium_paper_v1.md  Praxium_paper_v1.tex
scripts/: clean_neo4j.sh  clean_weaviate.sh  copy_staging_to_wikis.sh  generate_workflow_repo_pages.py  research_repos.py  run_relbench_campaign.sh  start_infra.sh  stop_infra.sh
src/: __init__.py  cli.py  config.yaml  expert.py  kapso.py  tinkerer.py
tasks/: 01_initialize_repo.md  01_test_report.md  02_setup_directories.md  02_test_report.md  03_developer_agent_loop.md  03_test_report.md  04_return_result.md  04_test_report.md  05_cleanup_dependencies.md  05_test_report.md  06_backward_compatibility.md  06_remove_problem_handler_run.md  07_move_feedback_to_search_strategy.md  08_developer_agent_structured_json.md  09_benchmark_backward_compatibility.md  README.md
tests/: demo_task1_initialize_repo.py  run_batch_ingest.py  test_agentic_kg_search.py  test_backend_search.py  test_backend_search_http.py  test_budget.py  test_claude_code_agent_bedrock.py  test_claude_code_auth_modes.py  test_cognitive_comprehensive.py  test_cognitive_e2e.py  test_cognitive_e2e_dimensions.py  test_cognitive_integration.py  test_cognitive_iteration_loop.py  test_cognitive_memory.py  test_cognitive_multi_iteration.py  (+95 more)
(+22198 files in other folders)
