[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "expert_agent"
version = "0.1.0"
description = "A machine learning expert agent for automated ML experimentation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Expert Agent Team"}
]
license = {text = "MIT"}

# Core dependencies
# NOTE: aider-chat has strict pinned dependencies (litellm, openai, cffi, etc.)
# that conflict with openhands and browser-use. Do not install those packages
# in the same environment. See requirements.txt for details.
dependencies = [
    "GitPython",
    "aider-chat>=0.35.0",
    "PyYAML",
    "python-dotenv",
    "neo4j",
    # Vector database for semantic search
    "weaviate-client>=4.0.0",
    # OpenAI embeddings API
    "openai>=1.0.0",
    # Pin cryptography to avoid cffi>=2.0.0 requirement (conflicts with aider-chat)
    "cryptography<46.0.0",
]

[project.optional-dependencies]
mle = [
    "neo4j",
    "openai",
    # mlebench installed separately (requires git lfs)
]
ale = [
    # ale-bench installed separately (requires docker setup)
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
expert-mle = "benchmarks.mle.runner:main"
expert-ale = "benchmarks.ale.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "benchmarks*"]
exclude = []

[tool.setuptools.package-data]
"*" = ["*.txt", "*.json", "*.yaml", "*.yml", "*.md"]
